add controller service and validation enterprise

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.servlet.context-path=/api
+spring.datasource.url=jdbc:postgresql://localhost:5432/msusers
+spring.datasource.username=admin
+spring.datasource.password=12345670
+spring.jpa.hibernate.ddl-auto=update
